# AnaCore

./: .gitignore  BED.py  GTFI.py  MANIFEST.in  README.md  RELEASES_NOTES.md  STARLog.py  VCFIO.py  VEPvcf.py  abstractFile.py  bed.py  bioStructures.py  dev_requirements.txt  extendRegions.py  gff3.py  illumina.py  matrix.py  node.py  pyproject.toml  region.py  requirements.txt  sequenceIO.py  setup.py  tophatFusion.py  vcf.py
.githooks/: pre-commit
anacore/: STARLog.py  VEPvcf.py  abstractFile.py  annotVcf.py  bed.py  bioStructures.py  filters.py  fusion.py  fusionCatcher.py  genomicRegion.py  getterPath.py  gff.py  gff3.py  gtf.py  hgvs.py  illumina  illumina.py  maf.py  matrix.py  msi.py  msiannot.py  msings.py  node.py  picardIO.py  region.py  sequence.py  sequenceIO.py  sv.py  tophatFusion.py  vcf.py  wig.py
anacore/illumina/: base.py  run.py  samplesheet.py
anacore/instrument/: demultiplex.py  samplesheet.py
anacore/msi/: annot.py  base.py  hubble.py  locus.py  msiannot.py  msings.py  msisensorpro.py  sample.py  (+1 more)
conda_build/: build.sh  meta.yaml
doc/: conf.py  index.html
jflow/: application.properties  module_load.txt
lib/: BED.py  README.md  SVIO.py  VEPvcf.py  abstractFile.py  filters.py  gff3.py  illumina.py  msings.py  node.py  region.py  requirements.txt  setup.py  sv.py  vcf.py
test/: test_abstractFile.py  test_bed.py  test_filters.py  test_fusion.py  test_genomicRegion.py  test_getterPath.py  test_gtf.py  test_hgvs.py  test_illumina.py  test_picardIO.py  test_region.py  test_sequence.py  test_sequenceIO.py  test_sv.py  test_vcf.py  test_wig.py
(+452 files in other folders)
